--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "end-of-stream": "^1.4.5",
     "exceljs": "^4.4.0",
     "firebase": "^11.9.1",
     "framer-motion": "^11.3.19",
+    "glob": "^13.0.0",
     "html5-qrcode": "^2.3.8",
+    "inflight": "^1.0.6",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.4",
@@ -52,6 +55,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^16.1.1",
     "nodemailer": "^7.0.10",
+    "once": "^1.4.0",
     "patch-package": "^8.0.0",
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
@@ -62,6 +66,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "wrappy": "^1.0.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
